classDiagram
    class AbsorptionSpectrum
    class Energy2
    class Frequency
    class Permittivity
    class SpectralProfile
    class XASSpectrum
    SpectralProfile <|-- AbsorptionSpectrum
    AbsorptionSpectrum <|-- XASSpectrum
    Permittivity --> Frequency : frequencies
    SpectralProfile --> Energy2 : energies
    SpectralProfile --> Energy2 : frequencies
    XASSpectrum --> AbsorptionSpectrum : exafs_spectrum
    XASSpectrum --> AbsorptionSpectrum : xanes_spectrum
